# amr_public

./: .gitignore
amr_binaries/: manifest.xml
amr_bugs/: CMakeLists.txt  manifest.xml
amr_bugs/cfg/: Wallfollower.cfg
amr_bugs/nodes/: bug2.cpp  bug2.py  wallfollower.cpp  wallfollower.py
amr_bugs/src/: bug_brain.py
amr_exploration/: CMakeLists.txt  manifest.xml
amr_exploration/include/: clustered_point_cloud_visualizer.h
amr_exploration/src/: frontier.cpp
amr_localization/: CMakeLists.txt  manifest.xml
amr_localization/launch/: pose_likelihood_server.launch
amr_mapping/: CMakeLists.txt  manifest.xml
amr_mapping/include/: sonar_map.h
amr_mapping/launch/: occupancy_query_server.launch  sonar_simulation_test.launch
amr_msgs/: manifest.xml
amr_msgs/msg/: ExecutePathFeedback.msg  ExecutePathGoal.msg  ExecutePathResult.msg  MoveToFeedback.msg  MoveToGoal.msg  MoveToResult.msg
amr_navigation/: CMakeLists.txt  manifest.xml
amr_navigation/include/: diff_velocity_controller.h  omni_velocity_controller.h
amr_navigation/nodes/: motion_controller.cpp  path_planner.py
amr_navigation/src/: diff_velocity_controller.cpp
amr_perception/: CMakeLists.txt  manifest.xml
amr_perception/cfg/: ObstacleDetector.cfg
amr_stage/: CMakeLists.txt
amr_stage_worlds/models/: hokuyo.inc
amr_ui/config/: explorer.rviz
amr_ui/nodes/: execute_path_client_stdin.py  occupancy_grid_display.py
